# python-crud

./: README.md  docker-compose.yaml  dockerfile  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test.db
app/: forms.py  main.py
app/forms/: edit.py  login.py
app/routes/: auth_routes.py  user_routes.py
app/static/css/: output.css
app/static/img/Login_files/: output.css
app/templates/: base.html  edit copy.html  edit.html  login.html  profile.html
app/views/: auth.py  user.py
src/: app.py  forms.py
src/database/: session.py
src/models/: repository.py  user.py
src/routes/: auth_routes.py  user_routes.py
src/static/css/: output.css  styles.css
src/static/img/: Login.html
src/templates/: edit.html  login.html  profile.html
tests/: conftest.py  fixtures.py  test_app.py  test_auth.py  test_auth_routes.py  test_user.py
tests/auth/: test_auth_routes.py
