[tool.poetry]
name = "python-crud-oauth"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.2.5"
flask-oauthlib = "0.9.6"
flask-wtf = "1.2.1"
pytest = "7.4.4"
requests = "2.31.0"
wtforms = "3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
